# osf.io

./: .ackrc  .bash_profile  .bowerrc  .coveragerc  .docker-compose.env  .docker-compose.gv.env  .docker-compose.mfr.env  .docker-compose.sharejs.env  .docker-compose.wb.env  .dockerignore  .env  .gitignore  .gitmodules  .invoke_completion_template  .jshintignore  .jshintrc  .konchrc  .mergify.yml  .noseids  .osf-pigeon.env  .pre-commit-config.yaml  .pyup.yml  .testmondata  .travis.yml  Brewfile  CHANGELOG  CONTRIBUTING.md  ChronosIntegration.ipynb  Comp Indexes.ipynb  Dockerfile  Dockerfile_admin  FLASK_TO_DJANGO_CONFIRMATION_VIEWS_MAPPING.md  GUIDELINES.md  Helper.py  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  Migrations.ipynb  NOTICE  (+105 more)
.cache/: dvn-4.hmdc.harvard.edu,dvn,api,data-deposit,v1,swordv2,service-document,386739a0131c29bec0bf245bff0fea13
.github/: dependabot.yml
.ipynb_checkpoints/: flaskpoc-checkpoint.ipynb
Framework/: __init__.py
IA/: IA_upload.py  dev-requirements.txt  dump_wiki.py  requirements.txt
Site/: Settings.py  Settings.py~
StylesFull/: the-company-of-biologists.csl
addons/: conftest.py
admin/: .bowerrc  README.md  bower.json  manage.py  package-lock.json  package.json  tasks.py  webpack-stats.json  webpack.admin.config.js  webpack.admin.config.js~HEAD  webpack.prod.config.js
admin_tests/: conftest.py  factories.py  test.csv  utilities.py
api/: README.md  auth.py  db.sqlite3  decorators.py  language.py  manage.py  requirements.txt
api_tests/: conftest.py  utils.py
cloudfiles/: dev-requirements.txt
core/: README.rst
docs/: api.rst  baseprovider.rst  conf.py  gettingstarted.rst  index.rst  modules.rst  provider.box.rst  provider.cloudfiles.rst  provider.dataverse.metadata.rst  provider.dataverse.rst  provider.dataverse.settings.rst  provider.dropbox.rst  provider.figshare.rst  provider.filesystem.rst  provider.github.rst  provider.googledrive.rst  provider.osfstorage.rst  provider.s3.metadata.rst  provider.s3.rst  provider.s3.settings.rst  providers.rst  releases.rst  settingup.rst  streams.rst  troubleshooting.rst  waterbutler.core.rst  waterbutler.providers.osfstorage.tasks.rst  waterbutler.providers.rst  waterbutler.rst  waterbutler.server.handlers.rst  waterbutler.server.rst  waterbutler.tasks.rst
dropbox/: setup.py
emails/: archive_file_not_found_desk.html.mako  archive_size_exceeded_desk.html.mako  collection_submission_rejected.html.mako  collection_submission_removed_moderator.html.mako  collection_submission_removed_private.html.mako  collection_submission_submitted.html.mako  confirm.html.mako  file_updated.html.mako  invite_default.html.mako  invite_preprints.html.mako  new_public_project.html.mako  no_login.html.mako  pending_registered.html.mako  reviews_resubmission_confirmation.html.mako  transactional.html.mako  welcome_osf4m.html.mako
figshare/: .gitignore  .travis.yml
framework/: __init__.py  exceptions.py  utils.py
github/: requirements.txt
mfr/: .gitignore  __init__.py  requirements.txt
migrate/: __init__.py  clean_duplicates.py  generate_links.py  main.py  migrate_data.py  resolve_backrefs.py  schema_yorm.py
nii/: api.py  mapcore.py  mapcore_api.py  mapcore_refresh_tokens.py  project_sync.py  refresh_tokens.py  rmgroups.py  test_api.py
nii_tests/: test_mapcore.py  test_merge_disable.py
notifications/: file_event_notifications.py  listeners.py  tasks.py
osf/: __init__.py  admin.py  apps.py  citation_style.json  exceptions.py  expressions.py  features.py  features.yaml  initial_data.json  metrics.py  modm_compat.py  notifications.yaml  permissions.py  system_tags.py  tasks.py  tests.py
osf_api_tests/: factories.py  settings.py
osf_models/: __init__.py  admin.py  app.py  apps.py  exceptions.py  modm_compat.py  tests.py
osf_models_tests/: README.md  conftest.py  factories.py  requirements.txt  settings.py  test_archive_target.py  test_auth_utils.py  test_comment.py  test_exceptions.py  test_guid.py  test_institution.py  test_institutions.py  test_modm_compat.py  test_node.py  test_preprints.py  test_private_link.py  test_queued_mail.py  test_registrations.py  test_sanctions.py  test_session.py  test_tag.py  test_user.py  test_watch_config.py  utils.py
osf_tests/: README.md  conftest.py  default_test_schema.py  factories.py  fakegcscreds.pem  metrics_factories.py  settings.py  test_analytics.py  test_app.py  test_archive_target.py  test_archiver.py  test_auth_utils.py  test_banner.py  test_cacheops.py  test_cedar_metadata.py  test_cedar_metadata_record.py  test_collection.py  test_collection_submission.py  test_comment.py  test_datacite_schema.py  test_draft_node.py  test_draft_registration.py  test_eager_queryset.py  test_elastic_search.py  test_exceptions.py  test_export_data.py  test_export_data_location.py  test_export_data_restore.py  test_external_accounts.py  test_fields.py  test_file_metadata.py  test_files.py  test_framework_utils.py  test_generate_sitemap.py  test_guid.py  test_guid_annotations.py  test_guid_auto_include.py  (+66 more)
(+9733 files in other folders)
